--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </header>
       </div>
       <div class="row">
-        <div class="col-8">
+        <div class="col-12 col-md-8">
           <h2>O que é</h2>
           <p>O <span style="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
     
@@ -85,7 +85,7 @@
           </video>
     
         </div>
-        <div class="col-4">
+        <div class="col-12 col-md-4">
           <h1>Outras Notícias</h1>
           <h2>Vídeo mais recente</h2>
           <video id="filme" controls="controls" poster="imagens/video-mini02.jpg">
