--- a/multimidia.html
+++ b/multimidia.html
@@ -8,6 +8,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Local CSS -->
+    <link rel="stylesheet" href="css/default.css">
+
+    <!-- Font Family -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <!-- Optional JavaScript -->
@@ -16,51 +22,50 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
-    <div id="interface">
-      <header id="cabecalho">
-      <hgroup>
-        <h1>Google Glass</h1>
-        <h2>A revolução do Google está chegando</h2>
-      </hgroup>
-
-      <img id="icone" src="imagens/multimidia.png">
-
-        <nav id="menu">
-          <h1>Menu Principal</h1>
-          <ul>
-            <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="index.html">Home</a></li>
-            <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-            <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-            <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-            <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-          </ul>
-        </nav>
-      </header>
-
-      <article id="noticia-principal">
-        <header id="cabecalho-artigo">
-          <hgroup>
-            <h3>Glass > Multimídia</h3>
-            <h1>Sons e Vídeos</h1>
-            <h2>por Gustavo Guanabara</h2>
-            <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 01/Maio/2013</h3>
-          </hgroup>
-        </header>
-
-
-        <div id="tv-radio">
-          <audio id="musica" controls="controls">
-            <source src="media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
-          </audio>
-          <video id="filme" controls="controls" poster="imagens/video-mini03.jpg">
-            <source src="media/getting-started.mp4" type="video/mp4">
-          </video>
+    <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
+        <div class="row">
+          <header>
+            <hgroup>
+              <h1>Google Glass</h1>
+              <h2>A revolução do Google está chegando</h2>
+            </hgroup>
+            <img id="icone" src="imagens/multimidia.png">
+            <nav id="menu">
+              <h1>Menu Principal</h1>
+              <ul>
+                <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+                <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+                <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+                <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+                <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+              </ul>
+            </nav>
+          </header>
         </div>
-      </article>
-      <footer id="rodape">
-        <p>Copyright &copy; 2013 - by Gustavo Guanabara<br/>
-        Facebook | Twitter</p>
-      </footer>
+   
+        <div class="row">
+          <header class="col-12">
+            <hgroup>
+              <h3>Tecnologia > Inovações</h3>
+              <h1>Saiba tudo sobre o Google Glass</h1>
+              <h2>por Gustavo Guanabara</h2>
+              <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 23/Abril/2013</h3>
+            </hgroup>
+          </header>
+        </div>
+
+
+        <div class="row">
+          <div class="col-md-12 col-12">
+            <video class="img-fluid rounded" controls="controls" poster="imagens/video-mini03.jpg">
+              <source src="media/getting-started.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+      <footer class="col-12">
+          <p class="footer">Copyright &copy; 2013 - by Gustavo Guanabara<br/>
+          Facebook | Twitter</p>
+        </footer>
     </div>
   </body>
 </html>
