fotos: galery grid: Make it responsive

--- a/fotos.html
+++ b/fotos.html
@@ -56,17 +56,22 @@
           </hgroup>
         </header>
       </div>
+      <div class="row">
+        <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
 
-      <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
-
-      <ul id="album-fotos">
-        <li id="foto01"><span>Agenda e lembretes</span></li>
-        <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
-        <li id="foto03"><span>Leve e compacto</span></li>
-        <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
-        <li id="foto05"><span>Vários tipos de lente</span></li>
-        <li id="foto06"><span>Informações importantes</span></li>
-      </ul>
+        <ul id="album-fotos">
+          <div class="col-md-12">
+          <li id="foto01"><span>Agenda e lembretes</span></li>
+          <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
+          <li id="foto03"><span>Leve e compacto</span></li>
+          </div>
+          <div class="col-md-12">
+          <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
+          <li id="foto05"><span>Vários tipos de lente</span></li>
+          <li id="foto06"><span>Informações importantes</span></li>
+          </div>
+        </ul>
+      </div>
       <footer class="col-12">
         <p class="footer">Copyright &copy; 2013 - by Gustavo Guanabara<br/>
         Facebook | Twitter</p>
