create the NavMenu

--- a/specs.html
+++ b/specs.html
@@ -25,25 +25,32 @@
     <script src="js/function.js"></script>
   
     <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
-      <div class="row">
-        <header>
-          <hgroup>
-            <h1>Google Glass</h1>
-            <h2>A revolução do Google está chegando</h2>
-          </hgroup>
-          <img id="icone" src="imagens/especificacoes.png">
-          <nav id="menu">
-            <h1>Menu Principal</h1>
-            <ul>
-              <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-              <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-              <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
-              <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-              <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-            </ul>
-          </nav>
-        </header>
-      </div>
+        <div class="row">
+            <div class="col-md-6">
+              <h1>Google Glass</h1>
+              <h2>A revolução do Google está chegando</h2>
+              <img id="icone" src="imagens/especificacoes.png">
+            </div>
+            <div class="col-md-6">
+                <ul class="nav justify-content-end">
+                  <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item" onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
+                    <a class="nav-link" href="specs.html">Especificações</a>
+                  </li>
+                  <li class="nav-item" onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
+                    <a class="nav-link" href="fotos.html">Fotos</a>
+                  </li>
+                  <li class="nav-item" onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
+                    <a class="nav-link" href="multimidia.html">Multimídia</a>
+                  </li>
+                  <li class="nav-item" onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
+                    <a class="nav-link" href="fale-conosco.html">Fale conosco</a>
+                  </li>
+                </ul>
+            </div>
+        </div>
  
       <div class="row">
         <header class="col-12">
