--- a/specs.html
+++ b/specs.html
@@ -26,12 +26,12 @@
   
     <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-12">
               <h1>Google Glass</h1>
               <h2>A revolução do Google está chegando</h2>
               <img id="icone" src="imagens/especificacoes.png">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 d-none d-lg-block">
                 <ul class="nav justify-content-end">
                   <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
                     <a class="nav-link" href="index.html">Home</a>
