--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -26,11 +26,13 @@
     
     <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
         <div class="row">
-            <div class="col-md-6 col-12">
-              <h1>Google Glass</h1>
-              <h2>A revolução do Google está chegando</h2>
-              <img id="icone" src="imagens/contato.png">
-            </div>
+            <div class="col-md-2 col-12 d-none d-lg-block">
+                <img class="img-fluid rounded" id="icone" src="imagens/contato.png">
+              </div>
+              <div class="col-md-4" id="head">
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+              </div>
             <div class="col-md-6 d-none d-lg-block">
                 <ul class="nav justify-content-end">
                   <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/contato.png')">
