--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Material CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/material-components-web@0.42.1/dist/material-components-web.min.css">
     <!-- Local CSS -->
     <link rel="stylesheet" href="css/default.css">
 
@@ -21,15 +23,19 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Material JavaScript -->
+    <script src="https://unpkg.com/material-components-web@0.42.1/dist/material-components-web.min.js"></script>
     <!-- Local JavaScript -->
     <script src="js/function.js"></script>
   
     <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
         <div class="row">
-            <div class="col-md-6 col-12">
+            <div class="col-md-2 col-12 d-none d-lg-block">
+              <img class="img-fluid rounded" id="icone" src="imagens/glass-oculos-preto-peq.png">
+            </div>
+            <div class="col-md-4 col-12" id="head">
               <h1>Google Glass</h1>
               <h2>A revolução do Google está chegando</h2>
-              <img id="icone" src="imagens/glass-oculos-preto-peq.png">
             </div>
             <div class="col-md-6 d-none d-lg-block">
                 <ul class="nav justify-content-end">
