Fix some strings

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -31,7 +31,7 @@
               </div>
               <div class="col-md-4" id="head">
                 <h1>Google Glass</h1>
-                <h2>A revolução do Google está chegando</h2>
+                <h2 id="title">A revolução do Google está chegando</h2>
               </div>
             <div class="col-md-6 d-none d-lg-block">
                 <ul class="nav justify-content-end">
@@ -59,7 +59,7 @@
           <hgroup>
             <h3>Fale Conosco > Contato</h3>
             <h1>Formulário de Contato</h1>
-            <h2>por Gustavo Guanabara</h2>
+            <h2 id="title">por Gustavo Guanabara</h2>
             <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 01/Maio/2013</h3>
           </hgroup>
         </header>
