--- a/fotos.html
+++ b/fotos.html
@@ -32,7 +32,7 @@
             </div>
             <div class="col-md-4" id="head">
               <h1>Google Glass</h1>
-              <h2>A revolução do Google está chegando</h2>
+              <h2 id="title">A revolução do Google está chegando</h2>
             </div>
           <div class="col-md-6 d-none d-lg-block">
               <ul class="nav justify-content-end">
@@ -58,9 +58,9 @@
       <div class="row">
         <header class="col-12">
           <hgroup>
-            <h3>Tecnologia > Inovações</h3>
-            <h1>Saiba tudo sobre o Google Glass</h1>
-            <h2>por Gustavo Guanabara</h2>
+            <h3>Glass > Fotos</h3>
+            <h1>Galeria de Imagens do Google Glass</h1>
+            <h2 id="title">por Gustavo Guanabara</h2>
             <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 23/Abril/2013</h3>
           </hgroup>
         </header>
